objects/Address_Latin_Translation__c.object
<CustomObject><fields>
        <fullName>Country_Code__c</fullName>
        <description>ISO country code</description>
        <inlineHelpText>Two character ISO Code of Country (Example: CN)</inlineHelpText>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Full Name of Country (Example: China)</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State_Code__c</fullName>
        <description>State code</description>
        <inlineHelpText>Two character ISO State Code according to Salesforce State/Country Picklists (Example: 11)</inlineHelpText>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State_Latin__c</fullName>
        <description>State in latin</description>
        <inlineHelpText>Full Latin Name of the State/Province - will be used to translate the Local value and store in the  Latin fields (Example: Beijing)</inlineHelpText>
        <label>State Latin</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State_Local__c</fullName>
        <description>State in local language</description>
        <inlineHelpText>Full Local Name of the State/Province - will be used to translate the Local value and store in the Latin fields (Example: 北京)</inlineHelpText>
        <label>State Local</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><description>Used to manage the list of countries with state/provinces that should be translated and saved in the Latin fields on the Account, Contact and Lead objects.</description><enableFeeds>false</enableFeeds><label>Address Latin Translation</label><visibility>Public</visibility></CustomObject>